[package]
name = "swc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1.0.136"
serde_json = "1.0.79"
swc_plugin = "0.49.0"
sha3 = "0.10.1"
base64 = "0.13.0"
pathdiff = "0.2.1"
regex = "1.5.6"
lazy_static = "1.4.0"

[dev-dependencies]
swc_ecma_parser = "0.102.4"
swc_ecma_transforms_testing = "0.81.0"
